--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+duckdb==1.3.0
+fastapi==0.115.12
 h11==0.16.0
+idna==3.10
+iniconfig==2.1.0
+numpy==2.2.6
+packaging==25.0
+pandas==2.2.3
+pluggy==1.6.0
+polars==1.30.0
+pydantic==2.11.5
+pydantic-core==2.33.2
+pygments==2.19.1
+pytest==8.4.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+typing-extensions==4.14.0
+typing-inspection==0.4.1
+tzdata==2025.2
+urllib3==2.4.0
 uvicorn==0.34.3
