--- a/tests/pyproject.toml
+++ b/tests/pyproject.toml
@@ -1,12 +1,7 @@
 [project]
-name = "react-fast-v12"
+name = "tests"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
-
-[tool.uv.workspace]
-members = [
-    "tests",
-]
