--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
-duckdb>=0.9.0
+duckdb>=1.0.0
 fastapi>=0.104.0
 h11==0.16.0
 idna==3.10
@@ -13,7 +13,8 @@ numpy==2.2.6
 packaging==25.0
 pandas==2.2.3
 pluggy==1.6.0
-polars==1.30.0
+polars>=1.30.0
+pyarrow>=18.0.0
 pydantic>=2.0.0
 pydantic-core==2.33.2
 pygments==2.19.1
@@ -37,3 +38,4 @@ sqlalchemy>=1.4.0,<1.5.0
 alembic>=1.7.0,<1.8.0
 psycopg2-binary>=2.9.0,<3.0.0
 psutil>=5.9.0,<6.0.0  # For system metrics
+connectorx>=0.3.3  # For ultra-fast data loading
