Added minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ docs/cursor_define_implementation_steps_sprint_2_c_1_todo.md
 docs/cursor_define_implementation_steps_sprint_2_c_1.md
 docs/cursor_define_implementation_steps_sprint_2_c_2.md
 
+docs/todo_final_plan.md
