Refactor endpoints to use pyarrow and polars

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@ docs/cursor_define_implementation_steps_sprint_2_c_1.md
 docs/cursor_define_implementation_steps_sprint_2_c_2.md
 
 docs/todo_final_plan.md
+no_output
+docs/code_review_prompt.md
