--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ docs/cursor_define_implementation_steps_sprint_2_c_2.md
 docs/todo_final_plan.md
 no_output
 docs/code_review_prompt.md
+.hypothesis/examples/822f55eacb4c3b69/f3a49e48c03833a0
